feat: IFS-4992 updates java 17 to 25 with openRewrite